Updated the comments on code

--- a/pyber_starter.ipynb
+++ b/pyber_starter.ipynb
@@ -163,7 +163,7 @@
     "average_fare = urb[\"fare\"].mean()\n",
     "sizes = urb[\"driver_count\"].mean()\n",
     "\n",
-    "#unnecessary code, made it more complicated then it needed to be\n",
+    "#found easier code to get this done\n",
     "#numb = [x for x in number_of_rides]\n",
     "#avg = [x for x in average_fare]\n",
     "#urban_nodupes = urban.drop_duplicates(subset=[\"city\"])\n",
@@ -177,7 +177,7 @@
     "average_fare_s = surb[\"fare\"].mean()\n",
     "sizes_s = surb[\"driver_count\"].mean()\n",
     "\n",
-    "#unnecessary code, made it more complicated then it needed to be\n",
+    "#found easier code to get this done\n",
     "#numb_s = [x for x in number_of_rides_s]\n",
     "#avg_s = [x for x in average_fare_s]\n",
     "#surban_nodupes = suburban.drop_duplicates(subset=[\"city\"])\n",
@@ -191,7 +191,7 @@
     "average_fare_r = rur[\"fare\"].mean()\n",
     "sizes_r = rur[\"driver_count\"].mean()\n",
     "\n",
-    "#unnecessary code, made it more complicated then it needed to be\n",
+    "#found easier code to get this done\n",
     "#numb_r = [x for x in number_of_rides_r]\n",
     "#avg_r = [x for x in average_fare_r]\n",
     "#rural_nodupes = rural.drop_duplicates(subset=[\"city\"])\n",
@@ -387,7 +387,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
